[gd_scene load_steps=7 format=3 uid="uid://d2hhtw1popthi"]

[ext_resource type="Shader" path="res://src/gdscript/shaders/outline.gdshader" id="1_b0sg4"]
[ext_resource type="Texture2D" uid="uid://cr0xdhpqcjqjd" path="res://assets/used_assets/textures/powerplants/bb_in_construction.png" id="1_e03ct"]
[ext_resource type="BitMap" uid="uid://1iqu0g7vgbmb" path="res://assets/used_assets/textures/powerplants/bb_click_mask.png" id="2_lphxd"]
[ext_resource type="Script" path="res://src/gdscript/powerplants/pp_map_emplacement/bb_in_construction/texture_button.gd" id="3_ddcsj"]
[ext_resource type="PackedScene" uid="uid://chpn7t75mmbkh" path="res://scenes/buttons/button_close.tscn" id="4_ysjb1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_52txu"]
resource_local_to_scene = true
shader = ExtResource("1_b0sg4")
shader_parameter/line_color = Vector4(1, 1, 1, 1)
shader_parameter/line_thickness = 1.0
shader_parameter/frequency = 10.0
shader_parameter/phase_speed = 1.0
shader_parameter/show = false

[node name="BbInConstruction" type="TextureButton" groups=["BB"]]
material = SubResource("ShaderMaterial_52txu")
offset_right = 701.0
offset_bottom = 512.0
pivot_offset = Vector2(350.5, 256)
toggle_mode = true
texture_normal = ExtResource("1_e03ct")
texture_click_mask = ExtResource("2_lphxd")
stretch_mode = 0
script = ExtResource("3_ddcsj")

[node name="CloseButton" parent="." instance=ExtResource("4_ysjb1")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -62.0
offset_right = 0.0
offset_bottom = 62.0
grow_horizontal = 0
scale = Vector2(1.15, 1.15)
stretch_mode = 0

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="toggled" from="." to="." method="_on_toggled"]
[connection signal="mouse_entered" from="CloseButton" to="." method="_on_close_button_mouse_entered"]
[connection signal="mouse_exited" from="CloseButton" to="." method="_on_close_button_mouse_exited"]
[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
